--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    complie 'org.apache.kafka:kafka-clients:2.5.0'
-    complie 'org.slif4j:slf4j-simple:1.7.30'
+    implementation 'org.apache.kafka:kafka-clients:2.5.0'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
 }
 
 test {
